[tool.poetry]
name = "skyscraper-solver"
version = "0.1.0"
description = "Skyscraper solver"
authors = ["Gianluca Mascolo <gianluca@gurutech.it>"]
license = "GPL-3.0-or-later"
homepage = "https://github.com/gianluca-mascolo/skyscraper-solver/"
repository = "https://github.com/gianluca-mascolo/skyscraper-solver/"
readme = "README.md"
packages = [{include = "skyscraper_solver"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.1.0"
flake8 = "^6.0.0"
pytest = "^7.2.2"

[tool.black]
line-length = 200

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
skyscraper = "skyscraper_solver.skyscraper:main"
